# portfolio-rs

./: .gitignore  Cargo.toml  bacon.toml
.github/workflows/: publish.yml
content/: about.md
content/design/: black-white.md  money-buddy.md  type-poster.md  website.md
content/python/: best-apps-ever-mpu.md  daily-tracker.md  simple-subscriptions.md  split-pdfs.md  teacode-extractor.md  things-parser.md  vivo.md
content/rust/: bashdoc.md  bashdoc2.md  bashdoc3.md  minishell.md  neuaudit.md
content/shell/: backup.md  file-searcher.md  save-emails.md  teacodevim.md
resources/: index.js  style.css
src/: cache.rs  main.rs  retrieve.rs  templates.rs
