[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "portfolio-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1"
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
frontmatter = {git = "https://github.com/dustinknopoff/frontmatter"}
hecs = {version = "0.3", optional = true}
lazy_static = "1.4.0"
maud = "0.22"
pulldown-cmark = "0.8"
rayon = {version = "1.5.0", optional = true}
salsa = "0.16"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8.14"
syntect = {version = "4.4", default-features = false, features = ["default-fancy"]}
walkdir = "2.3"
rss = "1.9.0"

[profile.dev]
opt-level = 1
