[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "portfolio-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "3.1"
anyhow = "1.0"
chrono = {version = "0.4", features = ["serde"]}
escaper = "0.1.0"
frontmatter = {git = "https://github.com/dustinknopoff/frontmatter"}
hecs = {version = "0.3", optional = true}
lazy_static = "1.4.0"
maud = "0.22"
pulldown-cmark = "0.8"
rayon = {version = "1.5", optional = true}
rss = {version = "1.9", features = ["validation"]}
salsa = "0.16"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
syntect = {version = "4.4", default-features = false, features = ["default-fancy"]}
walkdir = "2.3"
log = "0.4.11"
env_logger = "0.8.2"

[profile.dev]
opt-level = 1
